--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CodePen - Neural Melody Autocompletion</title>
+    <title>Ai piano Neural Melody Autocompletion @Berlin Andrew</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abel'>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/material-components-web@0.29.0/dist/material-components-web.min.css'>
     <!--link rel="stylesheet" href="./style.css"-->
