--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
     <title>Ai piano Neural Melody Autocompletion @Berlin Andrew</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Abel'>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/material-components-web@0.29.0/dist/material-components-web.min.css'>
