--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src='https://cdn.jsdelivr.net/npm/material-components-web@0.29.0/dist/material-components-web.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/babel-regenerator-runtime@6.5.0/runtime.min.js'></script>
     <script src='https://cdn.rawgit.com/danigb/tonal/9b6b1663/dist/tonal.min.js'></script>
-    <script src="https://html-css-js-node.github.io/JavaScript-Frameworks/mdh-ai-p.js"></script>
+    <script src="https://webappandroid.github.io/JavaScript-Frameworks/mdh-ai-p.js"></script>
     <!--script src="./script.js"></script-->
 
 
